Fix autoplay of HeroVideo on iOS

--- a/src/components/ContentHero/ContentHero.module.css
+++ b/src/components/ContentHero/ContentHero.module.css
@@ -25,7 +25,7 @@
 }
 
 .heroEightyPercent {
-  height: 100vw;
+  height: 85vw;
 
   @media (min-width: 768px) {
     height: 80vh;
